--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
@@ -673,6 +673,7 @@
                                             <br/>
                                             <span class="lable_bold">مسلسل</span>
                                         </th>
+
                                         <th align="center" name="nature_of_goods=" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Item Name</span>
@@ -737,6 +738,11 @@
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc='doc._get_zatca_product_name(line)["name"]["value"]'/>
                                         </td>
+                                         <td>
+        <t t-esc="line.product_id.with_context(lang='en_US').name"/>
+        <br/>
+        <t t-esc="line.product_id.with_context(lang='ar_SY').name"/>
+      </td>
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="doc.get_bt_146(line.zatca_id)"
                                                   t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
