--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -692,6 +692,12 @@
                                             <br/>
                                             <span class="lable_bold">التفاصيل السلع أو الخدمات</span>
                                         </th>
+                                        <th align="center" name="discount" class="second_table"
+                                            style="background-color:#4f4d4d;text-align:center;color:white;">
+                                            <span class="lable_bold">names</span>
+                                            <br/>
+                                            <span class="lable_bold">الاسم</span>
+                                        </th>
                                         <th align="right" name="item_subtotal" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Unit Price</span>
@@ -767,6 +773,9 @@
                                         </td>
                                          <td class="second_table" style="text-align:right;">
                                               <span t-esc="line.product_uom_id.name"/>
+                                        </td>
+                                        <td class="second_table" style="text-align:right;">
+                                              <span t-esc="line.product_arabic"/>
                                         </td>
 
 
