--- a/custom-addons/product_arabic/views/product_template_views.xml
+++ b/custom-addons/product_arabic/views/product_template_views.xml
@@ -34,4 +34,17 @@
             </xpath>
         </field>
     </record>
+
+    <record id="view_order_form2" model="ir.ui.view">
+            <field name="name">sale.order.form</field>
+            <field name="model">sale.order</field>
+            <field name="inherit_id" ref="sale.view_order_form"/>
+            <field name="arch" type="xml">
+
+                 <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="after">
+                    <field name="product_arabic" />
+
+                </xpath>
+            </field>
+        </record>
 </odoo>
