--- a/custom-addons/product_arabic/views/product_template_views.xml
+++ b/custom-addons/product_arabic/views/product_template_views.xml
@@ -42,7 +42,7 @@
             <field name="arch" type="xml">
 
                  <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="after">
-                    <field name="product_arabic" />
+                    <field name="product_arabic1" />
 
 
                 </xpath>
