--- a/custom-addons/product_arabic/views/product_template_views.xml
+++ b/custom-addons/product_arabic/views/product_template_views.xml
@@ -41,8 +41,8 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
 
-                 <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="after">
-                    <field name="product_arabic1" />
+                 <xpath expr="//field[@name='order_line']/form/group/group/field[@name='name']" position="after">
+                    <field name="product_arabic" />
 
 
                 </xpath>
