--- a/custom-addons/product_arabic/views/product_template_views.xml
+++ b/custom-addons/product_arabic/views/product_template_views.xml
@@ -41,7 +41,7 @@
             <field name="inherit_id" ref="sale.view_order_form"/>
             <field name="arch" type="xml">
 
-                 <xpath expr="//field[@name='order_line']/form/group/group/field[@name='name']" position="after">
+                 <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="after">
                     <field name="product_arabic" />
 
 
