--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
@@ -680,7 +680,7 @@
                                             <br/>
                                             <span class="lable_bold">التفاصيل السلع أو الخدمات</span>
                                         </th>
-                                        <th align="center" name="discount" class="second_table"
+                                        <th align="center" name="names-arab" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">names</span>
                                             <br/>
