--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -704,6 +704,12 @@
                                             <br/>
                                             <span class="lable_bold">الكمية</span>
                                         </th>
+                                         <th align="center" name="eng-name" class="second_table"
+                                            style="background-color:#4f4d4d;text-align:center;color:white;">
+                                            <span class="lable_bold">Name</span>
+                                            <br/>
+                                            <span class="lable_bold">Eng</span>
+                                        </th>
                                        <!-- <th align="center" name="discount" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Discount</span>
@@ -756,6 +762,9 @@
                                         </td>
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc='doc._get_zatca_product_name(line)["name"]["value"]'/>
+                                        </td>
+                                         <td class="second_table" style="text-align:right;">
+                                              <span t-esc="line.product_arabic"/>
                                         </td>
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="doc.get_bt_146(line.zatca_id)"
