--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
@@ -16,7 +16,7 @@
                         padding: 2px;
                         border: 1px solid black;
                         border-collapse: collapse;
-                        font-size:10px;
+                        font-size:11px;
                         }
                     </style>
                     <t t-if="doc.debit_origin_id">
@@ -673,15 +673,19 @@
                                             <br/>
                                             <span class="lable_bold">مسلسل</span>
                                         </th>
-
                                         <th align="center" name="nature_of_goods=" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                               <span class="lable_bold">الاسم العربي </span>
                                         </th>
+
+                                        <!--we add product name english to invoice -->
+
                                          <th align="center" name="eng-name" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                              <span class="lable_bold">الاسم اللاتيني </span>
                                         </th>
+                                        <!--- -->
+
                                         <th align="right" name="item_subtotal" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Unit Price</span>
@@ -694,6 +698,7 @@
                                             <br/>
                                             <span class="lable_bold">الكمية</span>
                                         </th>
+                                                    <!--we hide disscaount -->
 
                                       <!--  <th align="center" name="discount" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
@@ -741,9 +746,12 @@
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc='doc._get_zatca_product_name(line)["name"]["value"]'/>
                                         </td>
+                                        <!--we add product name english to invoice -->
+
                                         <td class="second_table" style="text-align:right;">
                                               <span t-esc="line.product_arabic"/>
                                         </td>
+                                        <!--- -->
 
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="doc.get_bt_146(line.zatca_id)"
@@ -752,6 +760,9 @@
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="'{:,}'.format(line.quantity)"/>
                                         </td>
+
+                                        <!--we hide disscaount -->
+
                                        <!-- <td class="second_table" style="text-align:right;">
                                             <span t-esc="doc.get_bt_136(line.zatca_id)"
                                                   t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
