--- a/custom-addons/product_arabic/views/product_template_views.xml
+++ b/custom-addons/product_arabic/views/product_template_views.xml
@@ -34,6 +34,9 @@
             </xpath>
         </field>
     </record>
+        <!-- Editeing-->
+
+        <!-- we Added the field Arabic product name in sale, account,-->
 
      <record model="ir.ui.view" id="sale_order_view_inherit">
     <field name="name">sale.order.view.inherit1</field>
