--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -12,20 +12,16 @@
         </field>
     </record>
 
-    <odoo>
-    <!-- Inherit and extend the product template tree view -->
-    <record id="product_template_tree_view_inherit" model="ir.ui.view">
+     <record id="product_template_tree_view_inherit" model="ir.ui.view">
         <field name="name">product.template.tree.inherit</field>
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_tree_view"/>
         <field name="arch" type="xml">
             <xpath expr="//tree" position="inside">
-                <field name="multi_uom_price_barcode" string="Barcodes" widget="many2many_tags"/>
+                <field name="multi_uom_price_barcode" string="Barcode"/>
             </xpath>
         </field>
     </record>
-</odoo>
-
 
     <!-- New Tree View for product.multi.uom.price -->
     <record id="view_product_multi_uom_price_tree" model="ir.ui.view">
