--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -25,7 +25,7 @@
     <record id="view_purchase_order_search" model="ir.ui.view">
     <field name="name">purchase.order.search.inherit</field>
     <field name="model">purchase.order</field>
-    <field name="inherit_id" ref="purchase.purchase_order_search"/>
+    <field name="inherit_id" ref="purchase.product_template_search_view_purchase"/>
     <field name="arch" type="xml">
         <xpath expr="//search" position="inside">
             <!-- Add the barcode field to the search view -->
