--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -15,24 +15,14 @@
      <record id="product_template_tree_view_inherit" model="ir.ui.view">
         <field name="name">product.template.tree.inherit</field>
         <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_tree_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//tree" position="inside">
-                <field name="multi_uom_price_barcode" string="Barcode" />
-            </xpath>
-        </field>
+        <field name="inherit_id" ref="product.product_template_search_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='categ_id']" position="after">
+                    <field string="multi_uom_price_barcode" name="barcodes"/>
+                </xpath>
+            </field>
     </record>
-    <record id="view_purchase_order_search" model="ir.ui.view">
-    <field name="name">purchase.order.search.inherit</field>
-    <field name="model">purchase.order</field>
-    <field name="inherit_id" ref="purchase.product_template_search_view_purchase"/>
-    <field name="arch" type="xml">
-        <xpath expr="//search" position="inside">
-            <!-- Add the barcode field to the search view -->
-            <field name="multi_uom_price_barcode" string="Barcodes" />
-        </xpath>
-    </field>
-</record>
+
 
     <!-- New Tree View for product.multi.uom.price -->
     <record id="view_product_multi_uom_price_tree" model="ir.ui.view">
