--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -12,16 +12,17 @@
         </field>
     </record>
 
-     <record id="product_template_tree_view_inherit" model="ir.ui.view">
-        <field name="name">product.template.tree.inherit</field>
-        <field name="model">product.template</field>
-        <field name="inherit_id" ref="product.product_template_search_view"/>
+     <record id="product_template_search_view_purchase1" model="ir.ui.view">
+            <field name="name">product.template.search.purchase</field>
+            <field name="model">product.template</field>
+            <field name="inherit_id" ref="product.product_template_search_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='categ_id']" position="after">
-                    <field string="multi_uom_price_barcode" name="barcodes"/>
-                </xpath>
+                <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
+                 <field name="barcode"/>
+                  <field name="product_variant_id" column_invisible="1"/>
+            </xpath>
             </field>
-    </record>
+        </record>
 
 
     <!-- New Tree View for product.multi.uom.price -->
