--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -17,10 +17,9 @@
             <field name="model">product.template</field>
             <field name="inherit_id" ref="product.product_template_search_view"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='multi_uom_price_id']/tree" position="inside">
-                 <field name="barcode"/>
-                  <field name="product_variant_id" column_invisible="1"/>
-            </xpath>
+                <xpath expr="//field[@name='categ_id']" position="after">
+                    <field string="multi_uom_price_barcode" name="a"/>
+                </xpath>
             </field>
         </record>
 
