--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -12,16 +12,16 @@
         </field>
     </record>
 
-     <record id="product_template_search_view_purchase1" model="ir.ui.view">
-            <field name="name">product.template.search.purchase</field>
-            <field name="model">product.template</field>
-            <field name="inherit_id" ref="product.product_template_search_view"/>
-            <field name="arch" type="xml">
-                <xpath expr="//field[@name='categ_id']" position="after">
-                    <field string="barcodes" name="multi_uom_price_barcode"/>
-                </xpath>
-            </field>
-        </record>
+     <record id="product_template_search_view_inherit" model="ir.ui.view">
+        <field name="name">product.template.search.inherit</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_search_view"/>
+        <field name="arch" type="xml">
+            <xpath expr="//search" position="inside">
+                <field name="multi_uom_price_id.barcode" string="Barcode" filter_domain="[('multi_uom_price_id.barcode', 'ilike', self)]"/>
+            </xpath>
+        </field>
+    </record>
 
 
     <!-- New Tree View for product.multi.uom.price -->
